@@ -1,5 +1,12 @@
 2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/property.lisp, src/interp/preparse.lisp
+	src/interp/macros.lisp: Eliminate use of REPEAT and
+	COLLECT form Lisp files.
+
+
+2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/Makefile.in: Use bootsys to compile .boot files.
 
 2011-04-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
